@@ -6,6 +6,7 @@ import static utils.Constants.Layer.TRAP;
 
 import java.awt.Graphics;
 import java.awt.image.BufferedImage;
+import java.util.Arrays;
 import java.util.List;
 
 import Behavior.Behavior;
@@ -30,8 +31,9 @@ public class Spike extends Entity implements Behavior{
             transform.position.y+TILES_SIZE/2, 
             transform.scale.x - SCALE, 
             transform.scale.y, 
-            List.of(EntityType.PLAYER), 
+            Arrays.asList(EntityType.PLAYER), 
             this);
+            
         addComponent(detector);
         img = AssetPool.getBufferedImage("TrashGame/res/assets/Object/spike.png", TILES_SIZE, TILES_SIZE);
         
